# LeniaCPP

./: CMakeLists.txt  README.md
include/: Cell.hpp  Color.hpp  Lenia.hpp  Window.hpp  World.hpp
src/: Cell.cpp  Color.cpp  Lenia.cpp  Window.cpp  World.cpp  main.cpp
